--- a/levels/result.html
+++ b/levels/result.html
@@ -39,5 +39,5 @@
     <button id="play-again" class="button" align="right" onclick="playAgain()">Play Again</button>
     </center>
 </body>
-<script src="result.js"></script>
+<script src="./result.js"></script>
 </html>
