--- a/index.html
+++ b/index.html
@@ -17,11 +17,10 @@
         <button id="start">START</button>
         <br><br>
         <ul id="list">
-            <a href="../play-with-number/levels/add.html"><button class="nano1">Addition</button></a><br><br>
-            <a href="../play-with-number/levels/divide.html"><button class="nano1">Division</button></a><br><br>
-            <a href="../play-with-number/levels/subtract.html"><button class="nano1">Substraction</button></a><br><br>
-            <a href="../play-with-number/levels/multiplication.html"><button
-                    class="nano1">Multiplication</button></a><br><br>
+            <a href="./levels/add.html"><button class="nano1">Addition</button></a><br><br>
+            <a href="./levels/divide.html"><button class="nano1">Division</button></a><br><br>
+            <a href="./levels/subtract.html"><button class="nano1">Substraction</button></a><br><br>
+            <a href="./levels/multiplication.html"><button class="nano1">Multiplication</button></a><br><br>
         </ul>
         <br><br><br>
     </center>
